codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_flat_for_bare_slash.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                        "
"› /                                                                     "
"                                                                        "
"  /model            choose what model and reasoning effort to use       "
"  /profile          choose the auth profile for this session            "
"  /provider         choose the default model provider                   "
"  /config           configure config.toml interactively                 "
"  /prompt           set a session-scoped prompt for future turns        "
"  /ide              include current selection, open files, and other    "
"                    context from your IDE                               "
